# IMG-to-ASCII

./: .gitignore  CHANGELOG.md  README.md  img-to-ascii.cabal
src/: Convert.hs  Export.hs  Main.hs  Types.hs
