cabal-version:       3.0
name:                img-to-ascii
version:             0.1.0.0
synopsis:            Convert images to ASCII art and export as structured JSON
description:         A simple CLI tool to convert images (PNG, JPG, BMP) into ASCII
                     art and export them as JSON files for use in text-based game
                     engines.
license:             MIT
author:              ZeroClaw
copyright:           2026 ZeroClaw
category:            Graphics
extra-source-files:  README.md

executable img-to-ascii
  main-is:             Main.hs
  other-modules:       Types, Convert, Export
  hs-source-dirs:      src
  build-depends:       base >=4.12 && <5,
                       JuicyPixels >=3.3 && <4,
                       aeson >=2.0 && <3,
                       aeson-pretty >=0.8 && <1,
                       bytestring >=0.10 && <1,
                       text >=1.2 && <3,
                       directory >=1.3 && <2,
                       filepath >=1.4 && <2,
                       vector >=0.12 && <1,
                       containers >=0.6 && <0.8,
                       optparse-applicative >=0.16 && <1
  default-language:    Haskell2010
  ghc-options:         -Wall
